# floatty

./: .editorconfig  Cargo.toml  build.zig  build.zig.zon  default.nix  flake.nix  package.nix  shell.nix
src/: args.zig  child.rs  cstrings.zig  fdops.rs  lib.rs  main.rs  main.zig  meta.zig  parent.rs  poller.rs  pty.rs  vecext.rs
src/parent/: signalfd_error.rs
src/pty/: csctty_error.rs  openpt_error.rs  ptsname_error.rs  unlockpt_error.rs
