[package]
name = "floatty"
version = "0.1.0"
edition = "2021"
authors = ["Qyriad <qyriad@qyriad.me>"]
description = "Floatty TUI terminal emulator"
repository = "https://github.com/Qyriad/floatty"
readme = true
license = "MIT"

[[bin]]
name = "floatty"
path = "src/main.rs"

[dependencies]
bstr = "1.10.0"
bytes = "1.8.0"
clap = { version = "4.5.20", features = ["wrap_help", "derive"] }
env_logger = "0.11.5"
log = "0.4.22"
miette = { version = "7.2.0", features = ["fancy"] }
nix = { version = "0.29.0", features = ["fs", "term"] }
polling = "3.7.3"
tap = "1.0.1"
